# TV_Pricer

./: CMakeLists.txt  calculations.cpp  calculations.h  gui_helper.cpp  gui_helper.h  main.cpp
